applications/zpc/components/zwave_rust/zwave_tx/src/zwave_tx_bindings.rs

pub type zwave_tx_options_t = zwave_tx_options;
#[doc = " @brief Callback function of zwave_tx_send_data(), indicating the result of the operation"]
#[doc = ""]
#[doc = " This function is called when an element in the TX Queue has been transmitted"]
#[doc = " (or attempted to be transmitted) and indicates the status of the operation."]
#[doc = ""]
#[doc = " @param status  Indicates how the transmission operation was completed."]
#[doc = "                Refer for \\ref zwapi_transmit_complete_codes for details."]
#[doc = " @param tx_info zwapi_tx_report_t reported by the \\ref ZWAPI. It"]
#[doc = "                contains transmission details, refer to \\ref zwapi_tx_report_t."]
#[doc = " @param user    User pointer provided in \\ref zwave_tx_send_data()"]
pub type on_zwave_tx_send_data_complete_t = ::std::option::Option<
    unsafe extern "C" fn(
        status: u8,
        tx_info: *const zwapi_tx_report_t,
        user: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    #[doc = " @brief Queue and send frames to Z-Wave nodes."]
    #[doc = ""]
    #[doc = " This function is used to transmitting Z-Wave frames. The provided payload"]
    #[doc = " will be encapsulated into the format described in connection->encapsulation."]
    #[doc = " This module does not verify if the destination actually supports the requested"]
    #[doc = " encapsulation, or if the destination exists at all (NodeID / Endpoint)."]
    #[doc = ""]
    #[doc = " This module will put all frames on a queue. The frames with the highest"]
    #[doc = " qos_priority will be send first. the tx_options and connection parameters"]
    #[doc = " allow all kind of frames to be transmitted, including multicast/broadcast."]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @param connection       Connection object describing the source and"]
    #[doc = "                         destination. If either the source or destination"]
    #[doc = "                         endpoints ID are not null, the frame will"]
    #[doc = "                         be Multi Channel encapsulated."]
    #[doc = " @param data_length      Length of the frame to send"]
    #[doc = " @param data             Points to the payload to send"]
    #[doc = " @param tx_options       Transmit options to use."]
    #[doc = " @param on_send_complete Callback function that will be called when the send"]
    #[doc = "                         operation has completed"]
    #[doc = " @param user             User pointer passed in argument of the on_send_complete"]
    #[doc = "                         callback function"]
    #[doc = " @param session          Pointer to location where to write the session id of"]
    #[doc = "                         the queued message. If this is set NULL the session id"]
    #[doc = "                         will not be written"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = " - SL_STATUS_OK The transmission request has been accepted and callback will be"]
    #[doc = "                    triggered when the operation is completed."]
    #[doc = " - SL_STATUS_FAIL   The transmission request has been rejected, callback will not"]
    #[doc = "                    be called."]
    pub fn zwave_tx_send_data(
        connection: *const zwave_controller::zwave_controller_connection_info_t,
        data_length: u16,
        data: *const u8,
        tx_options: *const zwave_tx_options_t,
        on_send_complete: on_zwave_tx_send_data_complete_t,
        user: *mut ::std::os::raw::c_void,
        session: *mut zwave_tx_session_id_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Queues and send a test frame to a Z-Wave node."]
    #[doc = ""]
    #[doc = " This function is used for sending a special test frame that will be"]
    #[doc = " testing the direct range connectivity of a remote Z-Wave Node."]
    #[doc = ""]
    #[doc = " Test frame are automatically send with the lowest priority."]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @param destination_node_id   Z-Wave NodeID of the destination."]
    #[doc = " @param power_level           Powerlevel setting to apply for"]
    #[doc = "                              the transmission. Refer to \\ref rf_power_level_t"]
    #[doc = " @param on_send_complete      Callback function that will be called when"]
    #[doc = "                              the send operation is completed"]
    #[doc = " @param user                  User pointer passed in argument of"]
    #[doc = "                              the on_send_complete callback function"]
    #[doc = " @param session               Pointer to location where to write the"]
    #[doc = "                              session id of the queued message. If"]
    #[doc = "                              this is set NULL the session id will"]
    #[doc = "                              not be written"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = " - SL_STATUS_OK The transmission request has been accepted and callback will be"]
    #[doc = "                    triggered when the operation is completed."]
    #[doc = " - SL_STATUS_FAIL   The transmission request has been rejected, callback will not"]
    #[doc = "                    be called."]
    pub fn zwave_tx_send_test_frame(
        destination_node_id: zwave_node_id_t,
        power_level: rf_power_level_t,
        on_send_complete: on_zwave_tx_send_data_complete_t,
        user: *mut ::std::os::raw::c_void,
        session: *mut zwave_tx_session_id_t,
    ) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Abort a queued or ongoing transmission."]
    #[doc = ""]
    #[doc = " Calling this function will attempt to cancel/abort a queued transmission."]
    #[doc = " If the transmission data has been passed to the Z-Wave module, it means that"]
    #[doc = " no further route resolution will be made, however the frame may still get"]
    #[doc = " transmitted and the callback of \\ref zwave_tx_send_data will still be called."]
    #[doc = " As a consequence the transmit status of on_zwave_tx_send_data_complete_t can"]
    #[doc = " be both TRANSMIT_COMPLETE_OK and TRANSMIT_COMPLETE_NO_ACK"]
    #[doc = ""]
    #[doc = " @param  session Session id returned by zwave_tx_send_data"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = " - SL_STATUS_OK          if the frame transmission has been aborted"]
    #[doc = "                         (removed from the queue and not sent)"]
    #[doc = " - SL_STATUS_NOT_FOUND   if the session_id is not valid."]
    #[doc = " - SL_STATUS_IN_PROGRESS if the frame transmission was initiated and"]
    #[doc = "                         aborted. The on_send_complete callback will"]
    #[doc = "                         be called."]
    pub fn zwave_tx_abort_transmission(session: zwave_tx_session_id_t) -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Initialize the zwave_tx component."]
    #[doc = ""]
    #[doc = " Z-Wave Tx will register an on_frame_received() callback to the"]
    #[doc = " \\ref zwave_controller"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK on success."]
    pub fn zwave_tx_init() -> sl_status_t;
}
extern "C" {
    #[doc = " @brief Stop the tx component."]
    #[doc = ""]
    #[doc = " This will stop ongoing transmission and flush all queues. No callbacks"]
    #[doc = " will be called when queues are emptied due to a shutdown."]
    #[doc = " It will also unregister the on_frame_received() callback to the"]
    #[doc = " \\ref zwave_controller"]
    #[doc = ""]
    pub fn zwave_tx_shutdown();
}
extern "C" {
    #[doc = " @brief Log the contents of the TX Queue."]
    #[doc = ""]
    #[doc = " @param  with_contents will print out the content of each"]
    #[doc = " queue element"]
    #[doc = ""]
    pub fn zwave_tx_log_queue(with_contents: bool);
}
extern "C" {
    #[doc = " Setup fixture for Z-Wave TX."]
    #[doc = ""]
    #[doc = " This setup function start the Z-Wave TX Process"]
    #[doc = ""]
    #[doc = " @returns SL_STATUS_OK if successful and SL_STATUS_FAIL if an error occurred"]
    pub fn zwave_tx_fixt_setup() -> sl_status_t;
}
